<resources>
    <string name="app_name"> Testing App </string>
    <string name="prompt_email"> Email </string>
    <string name="prompt_password"> Password </string>
    <string name="action_sign_in"> Login </string>
    <string name="action_sign_in_short"> Sign in </string>
    <string name="error_invalid_email"> This email address is invalid </string>
    <string name="error_invalid_password"> This password is too short </string>
    <string name="error_incorrect_password"> This password is incorrect </string>
    <string name="error_field_required"> This field is required </string>
    <string name="permission_rationale"> ontacts permissions are needed for providing email completions. </string>
    <string name="end_interview"> Finish </string>
    <string name="start_interview"> Start Interview </string>
    <string name="nextSection"> Next Section </string>
    <string name="dcstatus"> Interview Status </string>
    <string name="complete"> Complete </string>
    <string name="incomplete"> Incomplete </string>
    <string name="secALabel"> A: HH Identification, Introduction And Consent </string>
    <string name="secBLabel"> B: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="secCLabel"> SECTION C: SOCIO ECONOMIC STATUS OF HOUSEHOLD </string>
    <string name="secDLabel"> D: REPRODUCTIVE HEALTH, MATERNAL AND CHILD MORTALITY (Complete this section for all married aged 15–49 years in the household) </string>
    <string name="secELabel"> E: Deceased Mother Information </string>
    <string name="secFLabel"> F: Deceased Child Information </string>
    <string name="secGLabel"> LADY HEALTH WORKERS (LHWS) </string>
    <string name="secHALabel"> SECTION HA. CHILD HEALTH (Diarrhoea) </string>
    <string name="secHBLabel"> HB CHILD HEALTH ( ACUTE RESPIRATORY INFECTION (ARI) </string>
    <string name="secILabel"> SECTION I: IMMUNIZATION </string>
    <string name="secJLabel"> J: BREAST FEEDING AND NUTRITION </string>
    <string name="secKLabel"> SECTION K: WATER AND SANITATION </string>
    <string name="secLLabel"> SECTION L: HANDWASHING </string>
    <string name="secMLabel"> M: WASH (Spot Check) </string>
    <string name="title_activity_splashscreen"> SplashscreenActivity </string>
    <string name="dummy_button"> Dummy Button </string>
    <string name="dummy_content"> DUMMY\nCONTENT </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="day"> Day </string>
    <string name="month"> Month </string>
    <string name="year"> Year </string>
    <string name="hour"> Time </string>
    <string name="min"> Minute </string>
    <string name="other"> Other Specify </string>
    <string name="name"> Child Name </string>
    <string name="checkHHpresent"> Selected Head name present (A/C Line listing) </string>
    <string name="ta01"> Cluster Number </string>
    <string name="ta02"> Cluster type </string>
    <string name="ta02a"> LHW Covered </string>
    <string name="ta02b"> LHW UnCovered </string>
    <string name="ta02c"> LHW Partially Covered </string>
    <string name="ta03"> Name of Tehsil/Taluka </string>
    <string name="ta03a"> Tando Mohammad Khan </string>
    <string name="ta03b"> Tando Ghulam Hyder </string>
    <string name="ta03c"> Bulri Shah Karim </string>
    <string name="ta04"> Name of Union Council </string>
    <string name="ta04a"> Lakhat </string>
    <string name="ta04b"> Shaikh Bhirkio </string>
    <string name="ta04c"> Tando Saeendad </string>
    <string name="ta04d"> TMK 01 </string>
    <string name="ta04e"> TMK 02 </string>
    <string name="ta04f"> TMK 03 </string>
    <string name="ta04g"> Dando </string>
    <string name="ta04h"> Ghulam Shah Bagrani </string>
    <string name="ta04i"> Nazarpur </string>
    <string name="ta04j"> Tando Ghulam Hyder </string>
    <string name="ta04k"> Allah Yar Turk </string>
    <string name="ta04l"> Jinhan Soomro </string>
    <string name="ta04m"> Bulri Shah Karim </string>
    <string name="ta04n"> Saeed Khan Lund </string>
    <string name="ta04o"> Mullakatiar </string>
    <string name="ta04p"> Saeed Matto </string>
    <string name="ta04q"> Saeedpur </string>
    <string name="ta05"> House No </string>
    <string name="ta05h"> House No </string>
    <string name="ta05kh"> Khandan number </string>
    <string name="ta05u"> Gas or electricity bill No. </string>
    <string name="ta06"> Village </string>
    <string name="ta07"> Block/mohalla </string>
    <string name="ta08"> Street </string>
    <string name="ta09"> Have you got the permission to start interview? </string>
    <string name="tbAge"> Date of birth / Age </string>
    <string name="tbAge02"> Age </string>
    <string name="tbdob01"> Date of Birth </string>
    <string name="tb01"> Member Serial number </string>
    <string name="tb02"> Name </string>
    <string name="tb03"> Relationship to Head of HH </string>
    <string name="tb03a"> Head of HH </string>
    <string name="tb03b"> Wife/Husband </string>
    <string name="tb03c"> Son/Daughter </string>
    <string name="tb03d"> Son in law/Daughter in law </string>
    <string name="tb03e"> Grand child </string>
    <string name="tb03f"> Parents </string>
    <string name="tb03g"> Parents in law </string>
    <string name="tb03h"> Brother/Sister </string>
    <string name="tb03i"> Brother in law/Sister in law </string>
    <string name="tb03j"> Niece/Nephew </string>
    <string name="tb03k"> Grand Parents </string>
    <string name="tb03l"> Aunts/Uncle </string>
    <string name="tb03m"> Adopted/Step child </string>
    <string name="tb03n"> Domestic Servant </string>
    <string name="tb04"> Sex </string>
    <string name="tb05"> Name of Father </string>
    <string name="tb06"> Name of Mother </string>
    <string name="tb07"> Date of Birth Record DOB from card/certificate/memory recall. </string>
    <string name="tb08"> Age </string>
    <string name="tb09"> Education </string>
    <string name="tb10"> Occupation </string>
    <string name="tb10a"> Housewife </string>
    <string name="tb10b"> Professional /Managerial </string>
    <string name="tb10c"> Clerical/technical </string>
    <string name="tb10d"> Sales and Services </string>
    <string name="tb10e"> Skilled manual </string>
    <string name="tb10f"> Unskilled manual </string>
    <string name="tb10g"> Agriculture </string>
    <string name="tb10h"> Business </string>
    <string name="tb10ia"> Student-School </string>
    <string name="tb10ib"> Student-Madrasah </string>
    <string name="tb10j"> Unemployed </string>
    <string name="tb10k"> Retired </string>
    <string name="tb10l"> Teacher </string>
    <string name="tb10999"> Not Applicable </string>
    <string name="tb11"> Marital Status </string>
    <string name="tb11a"> Single </string>
    <string name="tb11b"> Married </string>
    <string name="tb11c"> Unmarried </string>
    <string name="tb11d"> Widowed </string>
    <string name="tb11e"> Divorced/Separate </string>
    <string name="tb12"> Total children of under 5 years age in household (Auto calculated) </string>
    <string name="tc0101"> Natural floor </string>
    <string name="tc0102"> Rudimentary floor </string>
    <string name="tc0103"> Finished floor </string>
    <string name="tc01"> Main material of the floor </string>
    <string name="tc01a"> Earth/sand/mud </string>
    <string name="tc01b"> Dung </string>
    <string name="tc01c"> Wood planks </string>
    <string name="tc01d"> Palm/bamboo </string>
    <string name="tc01e"> Parquet Or Polished Wood </string>
    <string name="tc01f"> Vinyl or asphalt strips </string>
    <string name="tc01g"> Ceramic tiles </string>
    <string name="tc01h"> Ceramic </string>
    <string name="tc01i"> Carpet </string>
    <string name="tc01j"> Bricks </string>
    <string name="tc01k"> Lime </string>
    <string name="tc01l"> Marble </string>
    <string name="tc0201"> Natural roof </string>
    <string name="tc0202"> Rudimentary roofing </string>
    <string name="tc0203"> Finished roofing </string>
    <string name="tc02"> Main material of the roof </string>
    <string name="tc02a"> No Roof </string>
    <string name="tc02b"> Thatch/Palm Leaf </string>
    <string name="tc02c"> Sod/Grass </string>
    <string name="tc02d"> Rustic Mat </string>
    <string name="tc02e"> Palm/Bamboo </string>
    <string name="tc02f"> Wood Planks </string>
    <string name="tc02g"> Cardboard </string>
    <string name="tc02h"> Metal/Tin/CGI </string>
    <string name="tc02i"> Reinforced brick cement/RCC </string>
    <string name="tc02j"> Metal </string>
    <string name="tc02k"> Wood/T-Iron/Mud </string>
    <string name="tc02l"> Calamine/Cement Fiber </string>
    <string name="tc02m"> Ceramic Tiles </string>
    <string name="tc02n"> Roofing Shingles </string>
    <string name="tc02o"> Bricks </string>
    <string name="tc0301"> Natural Walls </string>
    <string name="tc0302"> Rudimentary Walls </string>
    <string name="tc0303"> Finished Walls </string>
    <string name="tc03"> Main material of the walls </string>
    <string name="tc03a"> No walls </string>
    <string name="tc03b"> Cane/Palm/Trunks </string>
    <string name="tc03c"> Dirt </string>
    <string name="tc03d"> Stones with mud </string>
    <string name="tc03e"> Bamboo with mud </string>
    <string name="tc03f"> Uncovered adobe </string>
    <string name="tc03g"> Plywood </string>
    <string name="tc03h"> Cardboard </string>
    <string name="tc03i"> Reused wood </string>
    <string name="tc03j"> Cloth/Curtain/Tent </string>
    <string name="tc03k"> Carton/Plastic </string>
    <string name="tc03l"> Cement </string>
    <string name="tc03m"> Stone with lime/Cement </string>
    <string name="tc03n"> Bricks </string>
    <string name="tc03o"> Cement block </string>
    <string name="tc03p"> Covered adobe </string>
    <string name="tc03q"> Wood planks/Shingles </string>
    <string name="tc04"> How many rooms in this house are used for sleeping? </string>
    <string name="tc04a"> Number of rooms </string>
    <string name="tc05"> Do you or someone living in this Household own this dwelling? </string>
    <string name="tc05a"> Own </string>
    <string name="tc05b"> Rent </string>
    <string name="tf01"> Complete name of deceased child </string>
    <string name="tf02"> Father/mother Name of died child </string>
    <string name="tf03"> Gender </string>
    <string name="tf04"> Age at death </string>
    <string name="tf05"> Place of death </string>
    <string name="tf05a"> Home </string>
    <string name="tf05b"> Govt. Health Facility </string>
    <string name="tf05c"> Private Health facility </string>
    <string name="tf05d"> NGO health facility </string>
    <string name="tf05e"> Enroute to hospital </string>
    <string name="tf06"> Date of Death </string>
    <string name="tf07"> Cause of death </string>
    <string name="tf07a"> Birth before 37 weeks (Preterm) </string>
    <string name="tf07b"> Difficulty in breathing (Birth Asphyxia </string>
    <string name="tf07c"> Infection (Sepsis) </string>
    <string name="tf07d"> Pneumonia </string>
    <string name="tf07e"> Convulsion </string>
    <string name="tf07f"> Diarrhea </string>
    <string name="tf07g"> Fever </string>
    <string name="tf07h"> accident </string>
    <string name="tg01"> Do you know LHW of your area </string>
    <string name="tg02"> Does LHW visit your home? </string>
    <string name="tg02a"> Yes </string>
    <string name="tg02b"> No </string>
    <string name="tg03"> How often does she visit you? </string>
    <string name="tg03a">Daily </string>
    <string name="tg03b"> Weekly </string>
    <string name="tg03c"> Fornightly </string>
    <string name="tg03d"> Monthly </string>
    <string name="tg03e"> Ocassionally </string>
    <string name="tg03f"> Rarely </string>
</resources>