<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="horizontal"
    tools:context="edu.aku.hassannaqvi.uen_po_hhs.activities.SectionFActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layoutDirection="ltr"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/secFLabel"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/counterDecChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorHeading"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf01"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/tf01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/tf01"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf02"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/tf02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/tf02"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf03"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/tf03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tf03a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/tf03b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf04"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/tf04d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/day"
            android:inputType="number"
            android:maxLength="2" />


        <EditText
            android:id="@+id/tf04m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/month"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/tf04y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="2" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf05"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/tf05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/tf05a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf05a" />

            <RadioButton
                android:id="@+id/tf05b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf05b" />

            <RadioButton
                android:id="@+id/tf05c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf05c" />

            <RadioButton
                android:id="@+id/tf05d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/tf05d" />

            <RadioButton
                android:id="@+id/tf05e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf05e" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf06"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
            android:id="@+id/tf06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:focusable="true"
            android:hint="@string/tf06"
            android:textColor="@android:color/black"
            app:dateFormat="dd-MM-yyyy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tf07"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/tf07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/tf07a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07a" />

            <RadioButton
                android:id="@+id/tf07b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07b" />

            <RadioButton
                android:id="@+id/tf07c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07c" />

            <RadioButton
                android:id="@+id/tf07d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/tf07d" />

            <RadioButton
                android:id="@+id/tf07e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07e" />

            <RadioButton
                android:id="@+id/tf07f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07f" />

            <RadioButton
                android:id="@+id/tf07g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07g" />

            <RadioButton
                android:id="@+id/tf07h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tf07h" />

            <RadioButton
                android:id="@+id/tf0788"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/other" />

        </RadioGroup>

        <EditText
            android:id="@+id/tf0788x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/other"
            android:inputType="textCapWords"
            android:visibility="gone" />


        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="startInterview"
                android:text="@string/nextSection"
                android:textColor="#1ed61e"/>

            <Button
                android:id="@+id/btn_End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="endInterview"
                android:text="@string/end_interview"
                android:textColor="#ff1e1e" />

            <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->


            <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->
        </LinearLayout>

    </LinearLayout>
</ScrollView>