<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="horizontal"
    tools:context="edu.aku.hassannaqvi.uen_po_hhs.activities.SectionGActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/secGLabel"
            android:textSize="40sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/tg01"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />


        <RadioGroup
            android:id="@+id/tg01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/tg01a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/tg01b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/tg01888"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/dkn" />


        </RadioGroup>

        <LinearLayout
            android:id="@+id/fldGrptg02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/tg02"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <RadioGroup
                android:id="@+id/tg02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/tg02a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/tg02a" />

                <RadioButton
                    android:id="@+id/tg02b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/tg02b" />

                <RadioButton
                    android:id="@+id/tg02c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/tg02c" />

                <RadioButton
                    android:id="@+id/tg02d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/tg02d" />

                <RadioButton
                    android:id="@+id/tg0288"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/other" />

            </RadioGroup>

            <EditText
                android:id="@+id/tg0288x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/other"
                android:inputType="textCapWords"
                android:visibility="gone" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/tg03"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />


            <CheckBox
                android:id="@+id/tg03a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03a" />

            <CheckBox
                android:id="@+id/tg03b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03b" />

            <CheckBox
                android:id="@+id/tg03c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03c" />

            <CheckBox
                android:id="@+id/tg03d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03d" />

            <CheckBox
                android:id="@+id/tg03e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03e" />

            <CheckBox
                android:id="@+id/tg03f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/tg03f" />


        </LinearLayout>


        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="startInterview"
                android:text="@string/nextSection"
                android:textColor="#1ed61e"/>

            <Button
                android:id="@+id/btn_End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="endInterview"
                android:text="@string/end_interview"
                android:textColor="#ff1e1e" />

            <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->


            <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->
        </LinearLayout>

    </LinearLayout>

</ScrollView>